	  (http://sourceforge.net/tracker/index.php?func=detail&aid=3001826&group_id=26963&atid=389080)
	* Limit the history list of FEN notation in board setup (thanks to Steve)
	* Remove some CE-engines not in the default distribution from Makefile.conf
	* HTML export
	    - Corrected display of player names (no {} pair around it)
	    - Move comments are rendered according css style
	* Duplicate games display did not highlight correctly
	* It was not possible to remove a tb directory
	* Allow for Phalanx XXIII as a version of Phalanx, as it includes all patches necessary for Scid
	* Crash when replacing a game in certain languages (Thanks to Milan Zamazal)
	* Annotation
	    - Inrush fix, mainly noticeable with batch annotation without using book
	    - Repair lockup with UCI engines that announce their bestmove before being stopped
	      when they see a forced mate (stockfish...)
	    - Repair lockup with UCI engines that refuse to start doing anything useful when they
	      are started in a mate position (stockfish...)
	    - Added "crushing" (+-- or --+) as potential score NAG
	    - More consistency in starting and stopping analysis
	* Header search with ignore colours: colours were obeyed for the results (thanks to Gerd Lohrscheid)
	* Allow suppression of Abort/Adjourn/Draw/Takeback requests on FICS (thanks to Jose Joao Morais)
	* Reorder piece sets alphabetically
	* Allow the informant value for "won game" to count up to "mate found" (= 327)
	* Tiny font can now be set from the GUI
	* Input engine parameters were not used properly (ID: 2969395)
	* Minor flaw in Scid.eco (ID: 2963067;  thanks to Daniel Karlsson)
- Language updates:
	* brazilian portugese translation (thanks ot Gilberto de Almeida Peres)
	* nederland translation (thanks to Leander Laruelle)
	* spanish translation (thanks to Benigno Hernandez)
	* czech translation (thanks to Milan Zamazal)
	* NEW: suomi translation (thanks to Timo Pirinen)
- Help:
	* Add UTF-8 NAG-symbols